EventTag and Tag (rest+grpc)
