# internal/tag/dto/request.go
@@ -1,0 +1,5 @@
+package dto
+
+type CreateTagRequest struct {
+	TagName   string    `json:"tag_name" validate:"required"`
+}
